Git_WGBH_QC/src/objects/Classification__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Classifications</relationshipLabel>
        <relationshipName>Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification_Code_Value__c</fullName>
        <label>Classification Code Value</label>
        <referenceTo>Classification_Code__c</referenceTo>
        <relationshipLabel>Classifications</relationshipLabel>
        <relationshipName>Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification_Type__c</fullName>
        <description>Equates to the Record Type</description>
        <inlineHelpText>Select a classification type</inlineHelpText>
        <label>Classification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appeal Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Tagging &amp; Scores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Station Boards and Committees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Station Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey and Event Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Preferences</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classifications</relationshipLabel>
        <relationshipName>Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Household__c</referenceTo>
        <relationshipLabel>Classifications</relationshipLabel>
        <relationshipName>Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Classifications2</relationshipLabel>
        <relationshipName>Classifications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preference_Value__c</fullName>
        <inlineHelpText>Related to Preference</inlineHelpText>
        <label>Preference Value</label>
        <picklist>
            <controllingField>Preference__c</controllingField>
            <picklistValues>
                <fullName>@89.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>@Cape &amp; Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>@Classical Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>@GBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>@GBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>@Parents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Year Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>89.7 WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99.5 WCRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledgments via Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address is Incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aisle Seat for Ticket Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Opt Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analog Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Renewal Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Report via Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preference__c</fullName>
        <label>Preference</label>
        <picklist>
            <controllingField>Classification_Type__c</controllingField>
            <picklistValues>
                <fullName>Acknowledgement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Gift Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age Range (pledge reported)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anonymous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistive Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Append</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Subscribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Unsubscribe via AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Unsubscribe via Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Survey: Email Update Sign-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Survey: First Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Survey: Likelihood to recommend event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Survey: Satisfaction with event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Survey: Send More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Blue Hill Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Grouping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gift Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MemberCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <inlineHelpText>Please select a station to relate to the classification or preference regarding the station.</inlineHelpText>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Stations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy of Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TabName__c</fullName>
        <label>Classification Name</label>
        <picklist>
            <picklistValues>
                <fullName>Appeal Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Tagging &amp; Scores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Station Boards and Committees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Station Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey and Event Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto-Renew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MG Prospects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Classification</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>classification_code__c</fullName>
        <label>TA Classification Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>classification_tabname__c</fullName>
        <description>delete when you can untangle the visual force page</description>
        <label>Classification Tab Name X</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>classification_value__c</fullName>
        <label>TA Classification Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>end_date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>record_seq__c</fullName>
        <label>Record Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ta_classification_id__c</fullName>
        <externalId>true</externalId>
        <label>TA Classification ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Classification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Classification_Type__c</columns>
        <columns>Preference__c</columns>
        <columns>Preference_Value__c</columns>
        <columns>classification_code__c</columns>
        <columns>classification_value__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>classification_value__c</field>
            <operation>contains</operation>
            <value>AUTO_RENEW</value>
        </filters>
        <filters>
            <field>classification_value__c</field>
            <operation>equals</operation>
            <value>ICH,ICK,IEF</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyClassifications</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Preference__c</columns>
        <columns>Preference_Value__c</columns>
        <columns>classification_code__c</columns>
        <columns>ta_classification_id__c</columns>
        <columns>classification_value__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>11/4/2011 12:00 AM,11/3/2011 12:00 AM</value>
        </filters>
        <label>My Classifications</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000000000}</displayFormat>
        <label>Classification #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classifications</pluralLabel>
    <recordTypes>
        <fullName>Communication_Preferences</fullName>
        <active>true</active>
        <description>Marketing Preference - Email, Mail, Online, Name Rental, Renewals, Opt Out</description>
        <label>Communication Preferences</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Tagging_Scores</fullName>
        <active>true</active>
        <description>Identification on a contact or household regarding likelihood to give</description>
        <label>Data Tagging &amp; Scores</label>
    </recordTypes>
    <recordTypes>
        <fullName>appeal_preferences</fullName>
        <active>true</active>
        <description>Preference by Station regarding appeals</description>
        <label>Appeal Preferences</label>
    </recordTypes>
    <recordTypes>
        <fullName>benefit_preferences</fullName>
        <active>true</active>
        <description>Preference by Station regarding membership benefits &amp; premiums</description>
        <label>Benefit Preferences</label>
    </recordTypes>
    <recordTypes>
        <fullName>member_category</fullName>
        <active>true</active>
        <description>CRB Founding Member, ARONLY, eMember, Green, 2 Year, Discounts</description>
        <label>Member Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ongoing_membership</fullName>
        <active>true</active>
        <description>Sustainer, Renewals, Payment Type, Employee Renewal, Lifetime Memberships</description>
        <label>Ongoing Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>station_board_committee</fullName>
        <active>true</active>
        <description>Name of the Board or Committee that the contact participates currently or has in the past</description>
        <label>Station Boards and Committees</label>
    </recordTypes>
    <recordTypes>
        <fullName>station_partners</fullName>
        <active>true</active>
        <description>Affiliation with Teachers, Partners, Schools</description>
        <label>Station Partners</label>
    </recordTypes>
    <recordTypes>
        <fullName>survey_event_information</fullName>
        <active>true</active>
        <description>Survey Results, Disability &amp; Event Information</description>
        <label>Survey, Disability and Event Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>volunteer_preferences</fullName>
        <active>true</active>
        <description>Volunteer Preferences</description>
        <label>Volunteer Preferences</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>